name:                journal
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/julienXX/journal#readme
license:             BSD3
license-file:        LICENSE
author:              Julien Blanchard
maintainer:          julien@sideburns.eu
copyright:           2018 Julien Blanchard
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Journal.Reader, Journal.Writer, Journal.Setup
  ghc-options: -Wall -Werror
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , filepath
                     , text
                     , string-conversions
                     , markdown
                     , blaze-html
                     , ede
  default-language:    Haskell2010

executable journal
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , journal
                     , directory
                     , filepath
                     , text
                     , string-conversions
                     , markdown
                     , blaze-html

test-suite journal-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Journal.WriterSpec
  build-depends:       base
                     , journal
                     , hspec
                     , hspec-discover
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/julienXX/journal
