name:                toucan
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/julienXX/toucan#readme
license:             BSD3
license-file:        LICENSE
author:              Julien Blanchard
maintainer:          julien@sideburns.eu
copyright:           2018 Julien Blanchard
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable toucan
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
