name:                toucan
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/julienXX/toucan#readme
license:             BSD3
license-file:        LICENSE
author:              Julien Blanchard
maintainer:          julien@sideburns.eu
copyright:           2018 Julien Blanchard
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Toucan.Reader, Toucan.Writer, Toucan.Setup
  ghc-options: -Wall -Werror
  -- other-modules:  Sql.Parser, Sql.Evaluator
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , filepath
                     , text
                     , string-conversions
                     , markdown
                     , blaze-html
  default-language:    Haskell2010

executable toucan
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , toucan
                     , directory
                     , filepath
                     , text
                     , string-conversions
                     , markdown
                     , blaze-html

test-suite toucan-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , toucan
                     , hspec
                     , hspec-discover
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/julienXX/toucan
